RESOLVED FIXED146014
[SOUP] Fix return-type-c-linkage warning after r185553
https://bugs.webkit.org/show_bug.cgi?id=146014
Summary [SOUP] Fix return-type-c-linkage warning after r185553
Csaba Osztrogonác
Reported 2015-06-16 04:11:43 PDT
After http://trac.webkit.org/changeset/185553 we get the following warning if we build WebKit with clang: ../../Source/WebCore/platform/network/soup/WebKitSoupRequestGeneric.h:61:33: warning: 'webkitSoupRequestGenericGetRequest' has C-linkage specified, but returns user-defined type 'const WebCore::ResourceRequest &' which is incompatible with C [-Wreturn-type-c-linkage] const WebCore::ResourceRequest& webkitSoupRequestGenericGetRequest(WebKitSoupRequestGeneric*); ^ 1 warning generated.
Attachments
Patch (4.50 KB, patch)
2015-06-19 14:49 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2015-06-19 14:47:04 PDT
As much as I hate to convert a nice reference into a pointer, the alternative is to move the G_END_DECLS up above those function declarations, and that would be weird.
Michael Catanzaro
Comment 2 2015-06-19 14:49:23 PDT
WebKit Commit Bot
Comment 3 2015-06-19 16:26:35 PDT
Comment on attachment 255229 [details] Patch Clearing flags on attachment: 255229 Committed r185774: <http://trac.webkit.org/changeset/185774>
WebKit Commit Bot
Comment 4 2015-06-19 16:26:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.