[SOUP] Fix return-type-c-linkage warning after r185553 https://bugs.webkit.org/show_bug.cgi?id=146014

Reviewed by Martin Robinson.

Source/WebCore:

* platform/network/soup/WebKitSoupRequestGeneric.cpp:
(webkitSoupRequestGenericGetRequest): Return a pointer rather than a reference.
* platform/network/soup/WebKitSoupRequestGeneric.h: webkitSoupRequestGenericGetRequest now
returns a pointer rather than a reference.

Source/WebKit2:

* Shared/Network/CustomProtocols/soup/CustomProtocolManagerImpl.cpp:
(WebKit::CustomProtocolManagerImpl::start): webkitSoupRequestGenericGetRequest now returns
a pointer rather than a reference.


Canonical link: https://commits.webkit.org/164217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185774 268f45cc-cd09-0410-ab3c-d52691b4dbfc